# orthanc-wsi

./: .clang-format  .hgignore  AUTHORS  CITATION.cff  NEWS  README  TODO
Applications/: ApplicationToolbox.cpp  ApplicationToolbox.h  CMakeLists.txt  DicomToTiff.cpp  Dicomizer.cpp
Framework/: ColorSpaces.cpp  ColorSpaces.h  DicomToolbox.cpp  DicomToolbox.h  DicomizerParameters.cpp  DicomizerParameters.h  Enumerations.cpp  Enumerations.h  ImageToolbox.cpp  ImageToolbox.h  ImagedVolumeParameters.cpp  ImagedVolumeParameters.h  Jpeg2000Reader.cpp  Jpeg2000Reader.h  Jpeg2000Writer.cpp  Jpeg2000Writer.h  PrecompiledHeadersWSI.cpp  PrecompiledHeadersWSI.h  TiffReader.cpp  TiffReader.h
Framework/Algorithms/: PyramidReader.cpp  PyramidReader.h  ReconstructPyramidCommand.cpp  ReconstructPyramidCommand.h  TranscodeTileCommand.cpp  TranscodeTileCommand.h
Framework/Inputs/: CytomineImage.cpp  CytomineImage.h  DecodedPyramidCache.cpp  DecodedPyramidCache.h  DecodedTiledPyramid.cpp  DecodedTiledPyramid.h  DicomPyramid.cpp  DicomPyramid.h  DicomPyramidInstance.cpp  DicomPyramidInstance.h  DicomPyramidLevel.cpp  DicomPyramidLevel.h  HierarchicalTiff.cpp  HierarchicalTiff.h  ITiledPyramid.h  OnTheFlyPyramid.cpp  OnTheFlyPyramid.h  OnTheFlyPyramidsCache.cpp  OnTheFlyPyramidsCache.h  OpenSlideLibrary.cpp  OpenSlideLibrary.h  OpenSlidePyramid.cpp  OpenSlidePyramid.h  PlainTiff.cpp  PlainTiff.h  PyramidWithRawTiles.cpp  PyramidWithRawTiles.h  SingleLevelDecodedPyramid.cpp  SingleLevelDecodedPyramid.h  TiledJpegImage.h  TiledPngImage.h  TiledPyramidStatistics.cpp  TiledPyramidStatistics.h
Framework/Inputs/Orthanc/: DicomDatasetReader.cpp  DicomDatasetReader.h  DicomPath.cpp  DicomPath.h  DicomTag.cpp  DicomTag.h  FullOrthancDataset.cpp  FullOrthancDataset.h  IDicomDataset.h  IOrthancConnection.cpp  IOrthancConnection.h  OrthancHttpConnection.cpp  OrthancHttpConnection.h  OrthancPluginConnection.cpp  OrthancPluginConnection.h
Framework/Messaging/: CurlOrthancConnection.cpp  CurlOrthancConnection.h  FolderTarget.cpp  IFileTarget.h  IOrthancConnection.cpp  IOrthancConnection.h  OrthancConnectionBase.cpp  OrthancConnectionBase.h  OrthancTarget.cpp  OrthancTarget.h  PluginOrthancConnection.cpp  PluginOrthancConnection.h
Framework/MultiThreading/: BagOfTasks.h  BagOfTasksProcessor.cpp  BagOfTasksProcessor.h  ICommand.h  Semaphore.cpp  Semaphore.h
Framework/Orthanc/: README.txt
Framework/Outputs/: DicomPyramidWriter.cpp  DicomPyramidWriter.h  HierarchicalTiffWriter.cpp  HierarchicalTiffWriter.h  IPyramidWriter.h  InMemoryTiledImage.cpp  InMemoryTiledImage.h  MultiframeDicomWriter.cpp  MultiframeDicomWriter.h  PyramidWriterBase.cpp  PyramidWriterBase.h  TruncatedPyramidWriter.cpp  TruncatedPyramidWriter.h
Framework/Targets/: FolderTarget.cpp  FolderTarget.h  IFileTarget.h  OrthancTarget.cpp  OrthancTarget.h
Resources/: BrightfieldOpticalPath.json  OrthancWSI.doxygen  OrthancWSIClearCache.py  SampleDataset.json  SyncOrthancFolder.py  TestIIIFTiles.py  sRGB.txt
Resources/CMake/: BoostExtendedConfiguration.cmake  JavaScriptLibraries.cmake  LibTiffConfiguration.cmake  OpenJpegConfiguration.cmake  OpenJpegConfiguration.patch  Version.cmake
Resources/Graveyard/: CMakeLists.txt  Hello.cpp
Resources/Orthanc/: StoneToolbox.cpp  StoneToolbox.h
Resources/Orthanc/CMake/: Compiler.cmake  DownloadOrthancFramework.cmake
Resources/Orthanc/Plugins/: OrthancPluginCppWrapper.cpp  OrthancPluginCppWrapper.h
Resources/Orthanc/Stone/: DicomDatasetReader.cpp  DicomDatasetReader.h  DicomPath.cpp  DicomPath.h  FullOrthancDataset.cpp  FullOrthancDataset.h  IDicomDataset.h  IOrthancConnection.cpp  IOrthancConnection.h  OrthancHttpConnection.cpp  OrthancHttpConnection.h
ViewerPlugin/: CMakeLists.txt  DicomPyramidCache.cpp  DicomPyramidCache.h  IIIF.cpp  IIIF.h  OrthancExplorer.js  OrthancPluginConnection.cpp  OrthancPluginConnection.h  OrthancPyramidFrameFetcher.cpp  OrthancPyramidFrameFetcher.h  Plugin.cpp  RawTile.cpp  RawTile.h  mirador.html  openseadragon.html  viewer.html  viewer.js
